feat: refresh jwt endpoint
